// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test Button Render > Normal Button 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--secondary"
  style={{}}
  type="button"
/>
`;

exports[`Test Button Render > Primary Button 1`] = `
<button
  className="storybook-button storybook-button--medium storybook-button--primary"
  style={{}}
  type="button"
/>
`;

exports[`Test Button Render > Size Button 1`] = `
<button
  className="storybook-button storybook-button--large storybook-button--primary"
  style={{}}
  type="button"
/>
`;
